# reconciliation-engine

./: README.md  pyproject.toml
engine/: __init__.py  exceptions.py  logging_config.py  matcher.py  reconciliation.py
examples/: run_reconciliation.py
models/: __init__.py  enums.py  ledger_entry.py  transaction.py
src/: __init__.py  cli.py
src/engine/: __init__.py  dq_gate.py  exceptions.py  logging_config.py  matcher.py  persistence.py  reconciliation.py  validation_manifest.py
src/models/: README.md  __init__.py  contracts.py  enums.py  ledger_entry.py  transaction.py
src/strategies/: __init__.py  aggregate.py  base.py  exact.py  factory.py  fuzzy.py
strategies/: __init__.py  base.py  exact.py  factory.py  fuzzy.py
tests/: test_edge_cases.py  test_models.py  test_reconciliation_edge_cases.py  test_scenarios.py
