[project]
name = "reconciliation-engine"
version = "0.1.0"
description = "Strategy-based financial reconciliation engine with strict data contracts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "pydantic-extra-types>=2.0.0",
  "pycountry>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "strategies", "engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
